# views/genres.go
@@ -1,0 +1,9 @@
+package views
+
+type CreateGenreRequest struct {
+	Title string `json:"title"`
+}
+
+type UpdateGenreRequest struct {
+	Title string `json:"title"`
+}
